--- a/doc/ref.bib
+++ b/doc/ref.bib
@@ -18,3 +18,15 @@
   title = "{JSR 175: A Metadata Facility for the Java Programming Language}",
   note = "{\tt http://jcp.org/aboutJava/communityprocess/review/jsr175/}"
 }
+
+@inproceedings{deputy,
+  author = "Jeremy Condit and Matthew Harren and Zachary Anderson and David Gay and George Necula",
+  title = "Dependent Types for Low-Level Programming",
+  booktitle = "{ESOP'07}",
+}
+
+@inproceedings{safe-tinyos,
+ author = "Nathan Cooprider and Will Archer and Eric Eide and David Gay and John Regehr",
+ title = "Efficient Memory Safety for {TinyOS}",
+ booktitle = "{Sensys'07}"
+}
