--- a/doc/nescc.1
+++ b/doc/nescc.1
@@ -8,7 +8,7 @@ nescc - nesC compiler
     [\fB-docdir=\fIdir\fR] [\fB-topdir=\fIdir\fR] [\fB-graphviz=y\fI|\fBn\fR]
     [\fB-fnesc-simulate\fR] 
     [\fB-fnesc-nido-tosnodes=\fIn\fR] [\fB-fnesc-nido-motenumber=\fIexpression\fR]
-    [\fB-conly\fR] [\fB-fnesc-cfile=\fIfile\fR] 
+    [\fB-conly\fR] [\fB-fnesc-cfile=\fIfile\fR] [\fB-fnesc-gccize\fR]
     [\fB-fnesc-cppdir=\fIdirectory\fR] [\fB-fnesc-separator=\fIseparator\fR]
     [\fB-fnesc-no-inline\fR] [\fB-fnesc-optimize-atomic\fR]
     [\fB--version\fR] [\fB-fnesc-verbose\fR] [\fB-Wnesc-\fI...\fR]
@@ -80,6 +80,12 @@ option is specified).
 Specify a file in which to save the C code generated when compiling a
 component. Note: if you specify two components on the command line, then
 the C code from the second one will overwrite the C code from the first.
+.TP
+\fB-fnesc-gccize\fR
+Output target-specific extensions as gcc-style attributes rather than using
+the target's original syntax. Can help if using \fB-conly\fR and sending the
+nesC output from some other tool that understands gcc attributes but not the
+target-specific extensions.
 .TP
 \fB-fnesc-cppdir=\fIdirectory\fR
 Save all preprocessing results in \fIdirectory\fR. The directory is created
